Authentication service: JWT with access token and refresh token